--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^7.2.0",
-    "@google-cloud/text-to-speech": "^6.3.0"
+    "@google-cloud/text-to-speech": "^6.3.0",
+    "build": "^0.1.4"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
